[tool.poetry]
name = "occ"
version = "0.2"
description = ""
authors = ["Peter Spackman <peterspackman@fastmail.com>"]
homepage = "https://github.com/peterspackman/occ"
repository = "https://github.com/peterspackman/occ"
license = "GPL-3.0-or-later"
include = ["src/python/**/*.so"]
packages = [
    { include = "src/python/**/*.py"},
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.12"
sphinx = { version = ">=5.1.0", optional = true }
furo = { version = ">=2022.6.21", optional = true }
myst-parser = { version = ">=0.18.0", optional = true }

[tool.poetry.dev-dependencies]
setuptools = ">=42"
pybind11 = ">=2.9.2"
numpy = ">=1.12"
cmake = ">=3.22"
scikit-build = "^0.15"

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.14.1",
    "numpy>=1.12",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
