[build-system]
requires = ["scikit-build-core >=0.4.3", "cmake>3.29", "ninja; platform_system!='Windows'"]
build-backend = "scikit_build_core.build"

[project]
name = "occpy"
version = "0.7.3"
description = "A library for quantum chemistry"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Peter Spackman", email = "peterspackman@fastmail.com" },
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
# Optional: runtime dependency specification
dependencies = ["numpy >1.24.4"]

[project.scripts]
occpy = "occpy:run_occ_executable"

[project.urls]
Homepage = "https://github.com/peterspackman/occ"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build-{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
cmake.targets = ["_occpy", "occ"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Optional: run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"
skip = ["cp38-*", "pp*", "*musllinux*"] # Skip CPython and PyPy 3.8, musllinux due to cpp17
archs = ["auto64"]          # Only target 64 bit architectures

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"
