set(TEST_MAIN ${CMAKE_CURRENT_SOURCE_DIR}/test_main.cpp)
set(TEST_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

enable_testing()
add_subdirectory(core)
add_subdirectory(dft)
add_subdirectory(crystal)
add_subdirectory(geometry)
add_subdirectory(gto)
add_subdirectory(io)
add_subdirectory(interaction)
add_subdirectory(qm)
add_subdirectory(sht)
add_subdirectory(slater)
add_subdirectory(solvent)
